@@ -53,6 +53,7 @@ Fixed loading .nex snapshots and MMU not managed correctly
 Fixed Search menu feature
 Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
 Fixed showing footer message F5/Button menu
+Fixed bug reopening menu when executing run command on debug cpu and --allow-background-windows setting was disabled
 
 * Misc Changes:
 
